@@ -5,11 +5,11 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
-import java.util.List;
 import java.util.Map;
-import java.util.StringTokenizer;
 
 /**
+ * @author Nicola Ferraro, François Esnault
+ * @date 28 août 2015
  */
 class SimpleUciEngine implements Engine {
 
@@ -37,9 +37,8 @@ class SimpleUciEngine implements Engine {
 		
 		if(this.process == null) {
 			try {
-				this.process = Runtime.getRuntime().exec(this.command);
-	
-				// Use the system charset
+				this.process = new ProcessBuilder(this.command).start();
+
 				this.toEngine = new PrintWriter(new OutputStreamWriter(process.getOutputStream(), "UTF-8"));
 				this.fromEngine = new BufferedReader(new InputStreamReader(process.getInputStream(), "UTF-8"));
 	
@@ -71,58 +70,19 @@ class SimpleUciEngine implements Engine {
 		}
 	}
 	
+	/**
+	 * Method debugEngine.
+	 * @see engine.Engine#debugEngine()
+	 */
 	@Override
 	public void debugEngine() {
 		this.process = null;
 	}
 
-	private synchronized void disconnect() {
-		/*try {
-			process.destroy();
-		} catch(Exception e) {
-			Log.info("Unable to disconnect " + e);
-		} finally {
-			toEngine = null;
-			fromEngine = null;
-			process = null;
-		}*/
-	}
-
-	/**
-	 * Method computeBestMove.
-	 * @param moves List<String>
-	 * @return String
-	 * @see engine.Engine#computeBestMove(List<String>)
-	 */
-	public synchronized String computeBestMove(List<String> moves) {
-
-		try {
-			connect();
-
-			StringBuilder moveList = new StringBuilder();
-			for(String m : moves) {
-				moveList.append(" " + m);
-			}
-
-			write("position startpos moves" + moveList);
-			//write("go movetime " + preferences.getMaxComputationTimeMillis());
-			write("go depth 10");
-
-			String res = readStartsWith("bestmove");
-
-			return getToken(res, 1);
-		} catch(Exception e) {
-			System.out.print("Best move not found, exception");
-			throw new IllegalStateException(e);
-		} finally {
-			disconnect();
-		}
-	}
-
 	/**
 	 * Method read.
-	 * @return String
-	 */
+	
+	 * @return String */
 	private String read() {
 		try {
 			String read = fromEngine.readLine();
@@ -169,60 +129,6 @@ class SimpleUciEngine implements Engine {
 	}
 
 	/**
-	 * Method readStartsWith.
-	 * @param expectedResult String
-	 * @return String
-	 */
-	private String readStartsWith(String expectedResult) {
-		String line;
-		while((line=read())!=null) {
-			//System.out.println(line);
-			if(line.startsWith(expectedResult)) {
-				return line;
-			}
-		}
-		throw new IllegalStateException("No more input from uci engine");
-	}
-
-	/**
-	 * Method readStartsWithUntil.
-	 * @param expectedResult String
-	 * @return String
-	 */
-	private String readStartsWithUntil(String expectedResult) {
-		String line;
-		while((line=read())!=null) {
-			//System.out.println(line);
-			if(line.startsWith(expectedResult) && line.contains("seldepth")) {
-				return line;
-			}
-			return "EOF";
-		}
-		return "EOF";
-		//throw new IllegalStateException("No more input from uci engine");
-	}
-
-
-	/**
-	 * Method getToken.
-	 * @param s String
-	 * @param pos int
-	 * @return String
-	 */
-	private String getToken(String s, int pos) {
-		StringTokenizer st = new StringTokenizer(s, " ");
-		int i=0;
-		while(st.hasMoreTokens()) {
-			String t = st.nextToken();
-			if(i==pos) {
-				return t;
-			}
-			i++;
-		}
-		return null;
-	}
-
-	/**
 	 * Method write.
 	 * @param command String
 	 */
@@ -234,14 +140,11 @@ class SimpleUciEngine implements Engine {
 	/**
 	 * Method computeScore.
 	 * @param fen String
-	 * @return String
-	 * @see engine.Engine#computeScore(String)
+	 * @return String * @see engine.Engine#computeScore(String) * @see engine.Engine#computeScore(String) * @see engine.Engine#computeScore(String) * @see engine.Engine#computeScore(String)
 	 */
 	@Override
 	public String computeScore(String fen) {
 		
-		
-
 		try {
 			connect();
 			write("position fen " + fen);
@@ -250,7 +153,6 @@ class SimpleUciEngine implements Engine {
 			StringBuilder sb = new StringBuilder();
 			String line;
 			while((line=read())!=null) {
-				//System.out.println(line);
 				if(line.contains("bestmove")) {
 					sb.append(line + ". ");
 					break;
@@ -263,75 +165,9 @@ class SimpleUciEngine implements Engine {
 			return sb.toString();
 		} catch(Exception e) {
 			e.printStackTrace();
-			//Log.error("Best move not found, exception");
-			//throw new IllegalStateException(e);
-		} finally {
-			disconnect();
 		}
-		
 		
 		return fen;
 	}
-
-	/**
-	 * Method computeScoreFast.
-	 * @param fen String
-	 * @return String
-	 * @see engine.Engine#computeScoreFast(String)
-	 */
-	@Override
-	public String computeScoreFast(String fen) {
-		try {
-			connect();
-
-			skipLines(1);
-
-			write("uci");
-
-			readUntil("uciok");
-
-			Map<String, String> options = preferences.getOptions();
-			for(String name : options.keySet()) {
-				String value = options.get(name);
-				write("setoption name " + name + " value " + value);
-			}
-
-			write("isready");
-
-			assertReply("readyok");
-
-			write("ucinewgame");
-
-			write("position fen " + fen);
-			write("go depth " + preferences.getDepth());
-
-			String res = "";
-			boolean ended = false;
-			while(!ended) {
-				String tmp = readStartsWithUntil("info depth");
-				if(!tmp.equals("EOF")) {
-					res = tmp;
-				} else {
-					ended = true;
-				}
-			}
-
-			if(res.contains("mate"))
-				try {
-					return "#" + getToken(res, 9);
-				} catch(NullPointerException e) {
-					return "#";
-				}
-			else
-				return getToken(res, 9);
-
-		} catch(Exception e) {
-			return "#";
-		} finally {
-			disconnect();
-		}
-	}
-
-	
 
 }
